# tinyphone

./: .gitignore  .gitmodules  README.md  Vagrantfile  appveyor.yml  build_project.ps1  config.json
.github/workflows/: codeql-analysis.yml  docker.yaml  main.yml
distribution/docker/: .dockerignore  Dockerfile.base  Dockerfile.build  README.md  release.ps1  release.sh
microsip/: AccountDlg.h  AddDlg.cpp  AddDlg.h  BaseDialog.cpp  BaseDialog.h  ButtonDialer.cpp  CLevelsSliderCtrl.h  CListCtrl_Sortable.cpp  CSVFile.cpp  Calls.cpp  Contacts.h  Crypto.cpp  Crypto.h  Dialer.h  IconButton.cpp  MMNotificationClient.h  ModelessMessageBox.cpp  ModelessMessageBox.h  Preview.cpp  Resource.h  SettingsDlg.h  ShortcutsDlg.cpp  ShortcutsDlg.h  addons.cpp  const.h  define.h  ggets.h  global.cpp  jumplist.cpp  mainDlg.cpp  mainDlg.h  microsip.h  microsip.vcxproj  microsip.vcxproj.filters  settings.cpp  settings.h  stdafx.cpp  utf.cpp
microsip/addons/CXMLFile/: XMLFile.cpp
src/: AccountDlg.cpp  ButtonDialer.h  CLevelsSliderCtrl.cpp  CListCtrl_DataModel.h  CListCtrl_SortItemsEx.cpp  CListCtrl_SortItemsEx.h  CListCtrl_Sortable.h  CSVFile.h  Calls.h  ClosableTabCtrl.cpp  ClosableTabCtrl.h  Contacts.cpp  Dialer.cpp  IconButton.h  MessagesDlg.cpp  MessagesDlg.h  Preview.h  RinginDlg.cpp  RinginDlg.h  SettingsDlg.cpp  StdioFileEx.cpp  StdioFileEx.h  TemplateSmartPtr.h  Transfer.cpp  Transfer.h  VisualStylesXP.cpp  VisualStylesXP.h  addons.h  const.h  ggets.cpp  global.h  jumplist.h  langpack.cpp  langpack.h  main.rc  mainDlg.cpp  microsip.cpp  microsip.vcxproj  settings.cpp  stdafx.h  (+2 more)
src/addons/CXMLFile/: XMLFile.h
src/res/: dialog.rc2  main.rc2  menu.rc2
tinyphone/: aboutDialog.cpp  aboutDialog.h  account.cpp  account.h  app.cpp  app.hpp  baseapp.cpp  call.cpp  call.h  channel.h  config.cpp  config.h  consts.h  crypt.h  enum.h  events.h  guicon.cpp  guicon.h  log.h  metrics.h  microtar.cpp  microtar.h  mod_notify.cpp  net.cpp  net.h  phone.cpp  phone.h  resource.h  resource.rc  server.cpp  server.h  splash.cpp  splash.h  stampver.inf  stdafx.cpp  stdafx.h  tinyphone.cpp  tinyphone.sln  tinyphone.vcxproj  tinyphone.vcxproj.filters  (+4 more)
tinyphone-installer/: Product.wxs  tinyphone-installer.wixproj
tinyphone-installer/actions/: CheckResult.h  DoPostInstall.cpp  DoPreInstall.cpp  LogResult.cpp  LogResult.h  actions.cpp  actions.def  actions.h  actions.vcxproj  actions.vcxproj.filters  ciwstring.h  stdafx.cpp  stdafx.h
tinyphone-linux/: CMakeLists.txt  console.cpp  snapcraft.yaml
tinyphone-osx/: .gitignore  Podfile  README.md  package.sh  release-spec.json
tinyphone-osx/Tinyphone.xcodeproj/: project.pbxproj
tinyphone-osx/Tinyphone.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tinyphone-osx/Tinyphone.xcodeproj/xcshareddata/xcschemes/: Tinyphone.xcscheme
tinyphone-osx/src/: NSAlertPanel.hpp  NSAlertPanel.mm  Tinyphone-Bridging-Header.h  Tinyphone-C-Interface.h  Tinyphone-OC.hpp  Tinyphone-OC.mm  app.h  osxapp.cpp
tinyphone-osx/tinyphone/: AppDelegate.swift  Info.plist  ViewController.swift
tinyphone-osx/tinyphone/Assets.xcassets/AppIcon.appiconset/: Contents.json
tinyphone-osx/tinyphone/Assets.xcassets/MenuIcon.imageset/: Contents.json
tinyphone-osx/tinyphone/Base.lproj/: Main.storyboard
tinyphone-osx/tinyphone/Custom Views/: AccountsView.swift  AccountsView.xib  DateTimeView.swift  DateTimeView.xib  LoadableView.swift
